# starr

./: .gitignore  install.ps1  settings.gradle.kts
.github/workflows/: build.yml
.zcode/plans/: plan-sess_c1860888-e787-4c72-8556-db7803c0cc5d.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/auth2fa/app/: App.kt  MainActivity.kt
app/src/main/java/com/auth2fa/app/autofill/: TOTPAutofillService.kt
app/src/main/java/com/auth2fa/app/biometric/: BiometricHelper.kt
app/src/main/java/com/auth2fa/app/data/: CryptoUtils.kt  Database.kt
app/src/main/java/com/auth2fa/app/notification/: NotificationHelper.kt  NotificationReceiver.kt
app/src/main/java/com/auth2fa/app/rust/: RustBridge.kt
app/src/main/java/com/auth2fa/app/totp/: HOTPGenerator.kt  SteamTOTPGenerator.kt  TOTPGenerator.kt
app/src/main/java/com/auth2fa/app/ui/components/: AccountCard.kt  QRScanner.kt
app/src/main/java/com/auth2fa/app/viewmodel/: MainViewModel.kt
app/src/main/java/com/auth2fa/app/widget/: TOTPWidgetProvider.kt  WidgetConfigureActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  widget_bg.xml
app/src/main/res/layout/: autofill_dropdown_item.xml  totp_widget_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: autofill_service_config.xml  shortcuts.xml  totp_widget_info.xml
rust/: Cargo.toml  build-android.ps1  build-android.sh
rust/.cargo/: config.toml
rust/src/: crypto.rs  database.rs  export.rs  hotp.rs  jni_bridge.rs  lib.rs  models.rs  steam.rs  totp.rs
(+10 files in other folders)
