[package]
name = "auth2fa-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Crypto
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"

# Base32
base32 = "0.4"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
android_logger = "0.13"

# URL decoding for OTP URIs
urlencoding = "2.1"

# Error handling
thiserror = "1.0"

# JNI
jni = "0.21"

# Time
chrono = "0.4"

# PIN hashing
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
